--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </head>
 <body>
 
-	<div class="preload">
-		<span class="preloader"></span>
+	<div class="preloader" id="preload">
+		<div class="loader">Loading...</div>
 	</div>
 
 	<div class="wrapper"> <!-- Оболочка -->
@@ -191,23 +191,51 @@
 			<div class="container">
 
 				<div class="footer__body">
-
-					<ol>
-						<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-						<li>Aliquam tincidunt mauris eu risus.</li>
-						<li>Vestibulum auctor dapibus neque.</li>
-						<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-						<li>Aliquam tincidunt mauris eu risus.</li>
-						<li>Vestibulum auctor dapibus neque.</li>
-						<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-						<li>Aliquam tincidunt mauris eu risus.</li>
-						<li>Vestibulum auctor dapibus neque.</li>
-						<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-						<li>Aliquam tincidunt mauris eu risus.</li>
-						<li>Vestibulum auctor dapibus neque.</li>
-						<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-						<li>Aliquam tincidunt mauris eu risus.</li>
-					</ol>
+					<h2 class="services__title title">Contacts</h2>
+					<p class="services__text text">Lorem, ipsum dolor sit, amet consectetur adipisicing elit. At.</p>
+					<div class="footer__list">
+						<ul class="footer__nav">
+							<li>lorem</li>
+							<li>lorem</li>
+							<li>lorem</li>
+							<li>lorem</li>
+							<li>lorem</li>
+							<li>lorem</li>
+							<li>lorem</li>
+						</ul>
+						<ul class="footer__nav">
+							<li>lorem</li>
+							<li>lorem</li>
+							<li>lorem</li>
+							<li>lorem</li>
+							<li>lorem</li>
+							<li>lorem</li>
+							<li>lorem</li>
+							<li>lorem</li>
+							<li>lorem</li>
+						</ul>
+						<ul class="footer__nav">
+							<li>lorem</li>
+							<li>lorem</li>
+							<li>lorem</li>
+							<li>lorem</li>
+							<li>lorem</li>
+						</ul>
+						<ul class="footer__nav">
+							<li>lorem</li>
+							<li>lorem</li>
+							<li>lorem</li>
+							<li>lorem</li>
+							<li>lorem</li>
+						</ul>
+						<ul class="footer__nav">
+							<li>lorem</li>
+							<li>lorem</li>
+							<li>lorem</li>
+							<li>lorem</li>
+							<li>lorem</li>
+						</ul>
+					</div>
 
 					<div class="contacts">
 						<div class="contacts__item">
@@ -251,6 +279,7 @@
 							</a>
 							<span>intagram</span>
 						</div>
+						
 					</div>
 
 				</div>
